@@ -25,6 +25,15 @@
   border: 1px solid @block-border;
 }
 
+.import-tweets__error {
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 5px;
+  color: #ec574e;
+  padding: 20px 10px;
+  border: none;
+}
+
 .import-tweets__text {
   padding: 15px;
   min-height: 50px;
