@@ -14,6 +14,8 @@ Changes
 Fixes
 -----
 
+ - Display error message on the Tutorial plugin when the SQL query fails.
+
  - Fixed the SQL query in the Tutorial plugin.
 
  - Fix timestamp formatting in the console results.
